--- a/simulations/04_synaptic_balance.ipynb
+++ b/simulations/04_synaptic_balance.ipynb
@@ -669,7 +669,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": null,
    "id": "9359f533",
    "metadata": {},
    "outputs": [
@@ -861,7 +861,7 @@
    ],
    "source": [
     "# Importing the simulated data \n",
-    "filename = r'C:\\Users\\marce\\Escritorio\\Proyectos\\synaptic_lfp\\simulation_results\\eib_simulation_results.csv'\n",
+    "filename = r'C:\\Users\\marce\\Escritorio\\Proyectos\\synaptic_lfp\\simulation_data\\eib_simulation_results.csv'\n",
     "eib_data = pd.read_csv(filename, sep = ',')\n",
     "\n",
     "print(eib_data.shape)\n",
